# Client-Server-Encryption

./: README.md
Client/: AESWrapper.cpp  Base64Wrapper.cpp  Base64Wrapper.h  CMakeLists.txt  answers.cpp  answers.h  checkSum.cpp  checkSum.h  encryption.cpp  encryption.h  main.cpp  main.h  publicAndPrivateKeys.cpp  publicAndPrivateKeys.h  requests.cpp  requests.h  serverAnswerStruct.h  serverRequsetStruct.h  transfer.info
Server/: AES_implement.py  answerToClient.py  answers.py  checkDB.py  checksum.py  createDBCode.py  defensive.db  handler.py  main.py  nameToUUID.py  requestToServer.py  requests.py
